fix: Refactor code structure for improved readability and maintainability

--- a/src/css/colors.css
+++ b/src/css/colors.css
@@ -4,7 +4,7 @@
     --color-dourado: #d2a956;
     --color-rosa-perolado: #cfaeaa;
     --color-background: #f5efe6;
-    --color-text: #2e2e2a;
+    --color-text: #5c5c54;
     --color-background-footer: #2e2e2a;
     --color-text-footer: #f5efe6;
     --color-background-branco: #fbfaf8;
